--- a/src/tailwind-compiled.css
+++ b/src/tailwind-compiled.css
@@ -3527,6 +3527,11 @@ input.tab:checked + .tab-content,
   inset: 0px;
 }
 
+.inset-y-0 {
+  top: 0px;
+  bottom: 0px;
+}
+
 .-left-2 {
   left: -0.5rem;
 }
@@ -4059,6 +4064,10 @@ input.tab:checked + .tab-content,
   height: 100vh;
 }
 
+.h-28 {
+  height: 7rem;
+}
+
 .max-h-24 {
   max-height: 6rem;
 }
@@ -4211,6 +4220,14 @@ input.tab:checked + .tab-content,
 
 .w-screen {
   width: 100vw;
+}
+
+.w-36 {
+  width: 9rem;
+}
+
+.w-\[40\%\] {
+  width: 40%;
 }
 
 .min-w-0 {
@@ -4881,6 +4898,11 @@ input.tab:checked + .tab-content,
   border-color: rgb(255 255 255 / 0.05);
 }
 
+.border-shadow {
+  --tw-border-opacity: 1;
+  border-color: rgb(var(--color-shadow) / var(--tw-border-opacity));
+}
+
 .border-b-primary {
   --tw-border-opacity: 1;
   border-bottom-color: rgb(var(--color-primary) / var(--tw-border-opacity));
@@ -5063,34 +5085,32 @@ input.tab:checked + .tab-content,
   background-color: rgb(63 63 70 / var(--tw-bg-opacity));
 }
 
-.bg-secondary {
-  --tw-bg-opacity: 1;
-  background-color: rgb(var(--color-secondary) / var(--tw-bg-opacity));
-}
-
-.bg-secondary\/60 {
-  background-color: rgb(var(--color-secondary) / 0.6);
-}
-
-.bg-secondary\/20 {
-  background-color: rgb(var(--color-secondary) / 0.2);
-}
-
-.bg-tertiary {
-  --tw-bg-opacity: 1;
-  background-color: rgb(var(--color-tertiary) / var(--tw-bg-opacity));
-}
-
-.bg-tertiary\/70 {
-  background-color: rgb(var(--color-tertiary) / 0.7);
-}
-
 .bg-tertiary\/50 {
   background-color: rgb(var(--color-tertiary) / 0.5);
 }
 
 .bg-tertiary\/60 {
   background-color: rgb(var(--color-tertiary) / 0.6);
+}
+
+.bg-primary {
+  --tw-bg-opacity: 1;
+  background-color: rgb(var(--color-primary) / var(--tw-bg-opacity));
+}
+
+.bg-secondary {
+  --tw-bg-opacity: 1;
+  background-color: rgb(var(--color-secondary) / var(--tw-bg-opacity));
+}
+
+.bg-contrast {
+  --tw-bg-opacity: 1;
+  background-color: rgb(var(--color-contrast) / var(--tw-bg-opacity));
+}
+
+.bg-slate-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(148 163 184 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-50 {
@@ -5323,12 +5343,24 @@ input.tab:checked + .tab-content,
   padding-left: 0.25rem;
 }
 
+.pl-2 {
+  padding-left: 0.5rem;
+}
+
 .pl-3 {
   padding-left: 0.75rem;
 }
 
 .pl-7 {
   padding-left: 1.75rem;
+}
+
+.pr-20 {
+  padding-right: 5rem;
+}
+
+.pr-7 {
+  padding-right: 1.75rem;
 }
 
 .pt-1 {
@@ -5765,12 +5797,13 @@ input.tab:checked + .tab-content,
   color: rgb(202 138 4 / var(--tw-text-opacity));
 }
 
-.text-secondary\/60 {
-  color: rgb(var(--color-secondary) / 0.6);
-}
-
 .text-contentLink\/70 {
   color: rgb(var(--color-content-link) / 0.7);
+}
+
+.text-bg1 {
+  --tw-text-opacity: 1;
+  color: rgb(var(--color-bg1) / var(--tw-text-opacity));
 }
 
 .underline {
@@ -5881,6 +5914,12 @@ input.tab:checked + .tab-content,
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.shadow-sm {
+  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .shadow-xl {
   --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
@@ -5907,16 +5946,6 @@ input.tab:checked + .tab-content,
   --tw-shadow: var(--tw-shadow-colored);
 }
 
-.shadow-content {
-  --tw-shadow-color: rgb(var(--color-content) / 1);
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
-.shadow-slate-200 {
-  --tw-shadow-color: #e2e8f0;
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
 .outline-none {
   outline: 2px solid transparent;
   outline-offset: 2px;
@@ -5938,6 +5967,11 @@ input.tab:checked + .tab-content,
   --tw-ring-inset: inset;
 }
 
+.ring-gray-300 {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(209 213 219 / var(--tw-ring-opacity));
+}
+
 .ring-gray-500\/10 {
   --tw-ring-color: rgb(107 114 128 / 0.1);
 }
@@ -5945,15 +5979,6 @@ input.tab:checked + .tab-content,
 .ring-white {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(255 255 255 / var(--tw-ring-opacity));
-}
-
-.ring-secondary\/60 {
-  --tw-ring-color: rgb(var(--color-secondary) / 0.6);
-}
-
-.ring-bg1 {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(var(--color-bg1) / var(--tw-ring-opacity));
 }
 
 .ring-bg2 {
@@ -6406,6 +6431,16 @@ a:hover {
           user-select: none;
 }
 
+.placeholder\:text-gray-400::-moz-placeholder {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
+}
+
+.placeholder\:text-gray-400::placeholder {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
+}
+
 .placeholder\:opacity-0::-moz-placeholder {
   opacity: 0;
 }
@@ -6823,6 +6858,21 @@ a:hover {
 .focus\:outline-none:focus {
   outline: 2px solid transparent;
   outline-offset: 2px;
+}
+
+.focus\:ring-2:focus {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+.focus\:ring-inset:focus {
+  --tw-ring-inset: inset;
+}
+
+.focus\:ring-indigo-600:focus {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(79 70 229 / var(--tw-ring-opacity));
 }
 
 .focus\:transition-\[border-color_0\.2s\]:focus {
@@ -7398,9 +7448,18 @@ a:hover {
     padding-right: 3rem;
   }
 
+  .sm\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+
   .sm\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
+  }
+
+  .sm\:leading-6 {
+    line-height: 1.5rem;
   }
 }
 
