--- a/src/tailwind-compiled.css
+++ b/src/tailwind-compiled.css
@@ -941,7 +941,7 @@ select {
 }
 
 ::selection {
-  color: var(--color-content);
+  /* color: var(--color-content); */
   background: var(--color-primary);
 }
 
@@ -955,15 +955,6 @@ select {
     width: auto !important;
     height: auto !important;
   } */
-
-div {
-  -webkit-user-select: none;
-  /* Safari */
-  /* IE 10 and IE 11 */
-  -moz-user-select: none;
-       user-select: none;
-  /* Standard syntax */
-}
 
 *, ::before, ::after {
   --tw-border-spacing-x: 0;
@@ -1803,6 +1794,21 @@ div {
   flex-shrink: 0;
 }
 
+.radio {
+  flex-shrink: 0;
+  --chkbg: var(--bc);
+  height: 1.5rem;
+  width: 1.5rem;
+  cursor: pointer;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  border-radius: 9999px;
+  border-width: 1px;
+  border-color: var(--fallback-bc,oklch(var(--bc)/var(--tw-border-opacity)));
+  --tw-border-opacity: 0.2;
+}
+
 .select {
   display: inline-flex;
   cursor: pointer;
@@ -2563,6 +2569,32 @@ input.tab:checked + .tab-content,
   50% {
     background-position-x: -115%;
   }
+}
+
+.radio:focus {
+  box-shadow: none;
+}
+
+.radio:focus-visible {
+  outline-style: solid;
+  outline-width: 2px;
+  outline-offset: 2px;
+  outline-color: var(--fallback-bc,oklch(var(--bc)/1));
+}
+
+.radio:checked,
+  .radio[aria-checked="true"] {
+  --tw-bg-opacity: 1;
+  background-color: var(--fallback-bc,oklch(var(--bc)/var(--tw-bg-opacity)));
+  background-image: none;
+  animation: radiomark var(--animation-input, 0.2s) ease-out;
+  box-shadow: 0 0 0 4px var(--fallback-b1,oklch(var(--b1)/1)) inset,
+      0 0 0 4px var(--fallback-b1,oklch(var(--b1)/1)) inset;
+}
+
+.radio:disabled {
+  cursor: not-allowed;
+  opacity: 0.2;
 }
 
 @keyframes radiomark {
